<resources>
    <string name="app_name">Open Pomodoro</string>
    <string name="app_version">0.1.0</string>

    <string name="title_activity_main">Open Pomodoro</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>

    <!--AboutActivity-->
    <string name="about_developer">Developer:</string>

    <!-- PomodoroNotificationManager -->
    <string name="notification_work_message">Time to work</string>
    <string name="notification_rest_message">Time to rest</string>

    <!--Pomodoro preferences-->
    <string name="pref_pomodoro_time_key">pref_pomodoro_time</string>
    <string name="pomodoro_time_default">00:25:00</string>
    <!--Rest preferences-->
    <string name="pref_rest_time_key">pref_rest_time</string>
    <string name="rest_time_default">00:05:00</string>
    <!--Long rest preferences-->
    <string name="pref_long_rest_time_key">pref_long_rest_time</string>
    <string name="long_rest_time_default">00:20:00</string>
    <!--Extended time preferences-->
    <string name="pref_extended_time_key">pref_extended_time</string>
    <string name="extended_time_default">00:03:00</string>
    <!--Sound  and vibration preferences-->
    <string name="pref_play_sound_key">pref_play_sound</string>
    <string name="pref_vibration_key">pref_vibration</string>
    <!--Auto skip preference-->
    <string name="pref_auto_skip_key">pref_auto_skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
