<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Time preferences">
        <me.dielsonsales.app.openpomodoro.presentation.views.TimePreference
            android:title="Pomodoro time"
            android:key="@string/pref_pomodoro_time_key"
            android:defaultValue="@string/pomodoro_time_default"/>
        <me.dielsonsales.app.openpomodoro.presentation.views.TimePreference
            android:title="Rest time"
            android:key="@string/pref_rest_time_key"
            android:defaultValue="@string/rest_time_default"/>
        <me.dielsonsales.app.openpomodoro.presentation.views.TimePreference
            android:title="Long rest time"
            android:key="@string/pref_long_rest_time_key"
            android:defaultValue="@string/long_rest_time_default"/>
        <me.dielsonsales.app.openpomodoro.presentation.views.TimePreference
            android:title="Extended time"
            android:key="@string/pref_extended_time_key"
            android:defaultValue="@string/extended_time_default"/>
        <CheckBoxPreference
            android:title="Enable extended time"
            android:summary="Enables the extended time"
            android:key="@string/pref_auto_skip_key"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Alert preferences">
        <CheckBoxPreference
            android:title="Play sound"
            android:key="@string/pref_play_sound_key"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:title="Vibrate"
            android:key="@string/pref_vibration_key"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Others">
        <Preference
            android:title="About">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.dielsonsales.app.openpomodoro"
                android:targetClass="me.dielsonsales.app.openpomodoro.presentation.AboutActivity"/>
        </Preference>
    </PreferenceCategory>



</PreferenceScreen>